product details page

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @theme{
   --font-raleway: Raleway;
   --color-primary: #5ECE7B;
-  --color-primaryText: #43464E;
+  --color-primaryText: #1D1F22;
   --color-secondaryText: #8D8F9A;
 }
