improuve details page, create error page

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,17 @@
   --color-primary: #5ECE7B;
   --color-primaryText: #1D1F22;
   --color-secondaryText: #8D8F9A;
+  --color-lightGray: #E0E0E0
+}
+::-webkit-scrollbar{
+  background: rgba(0, 0, 0, 0.1);
+  width: 10px;
+}
+::-webkit-scrollbar-button{
+  display: none;
+}
+::-webkit-scrollbar-thumb{
+  width: 2px;
+  background: #8D8F9A;
+  border-radius: 100px;
 }
